# resources/views/pages/user.blade.php
@@ -12,8 +12,9 @@
     $id = request()->route('id');
     $user = App\Http\Controllers\UserController::getUserById($id);
     $is_banned = App\Http\Controllers\UserController::checkIfBanned($id);
-    $received_feedback = App\Http\Controllers\ReviewController::getAuthorReviews($id);
-    $sent_feedback = App\Http\Controllers\ReviewController::getReceivedReviews($id);
+    $sent_feedback = App\Http\Controllers\ReviewController::getAuthorReviews($id);
+    $received_feedback = App\Http\Controllers\ReviewController::getReceivedReviews($id);
+    $average_score = App\Http\Controllers\ReviewController::averageScore($id);
     
 @endphp
 
@@ -36,7 +37,13 @@
           @else
           <img src="{{url('/images/profile/default.png')}}" alt="avatar" class="rounded-circle img-fluid" style="width: 150px; height: 150px">
           @endif
-          <h5 class="my-3">{{$user['username']}}</h5>
+          <h5 class="my-2">{{$user['username']}}</h5>
+          <span class="d-flex justify-content-center align-items-center">
+            <div class="text-danger">{{$average_score}}</div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-star" viewBox="0 0 16 16">
+              <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
+            </svg>
+          </span>
           <p class="text-muted mb-1">{{$user['name']}}</p>
           <p class="text-muted mb-1">{{$user['email']}}</p>
           <div class="d-flex justify-content-center align-items-center">
@@ -46,7 +53,7 @@
               <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
             </svg>
           </button>
-            <button type="submit" class="btn btn-primary profile" data-bs-toggle="modal" data-bs-target="#deleteModal">
+            <button type="submit" class="btn btn-primary profile mx-2" data-bs-toggle="modal" data-bs-target="#deleteModal">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
                     <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
                     <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
@@ -209,17 +216,19 @@
             <tr>
               <th scope="col">Receiver</th>
               <th scope="col">Comment</th>
+              <th scope="col">Rating</th>
             </tr>
           </thead>
           <tbody>
-            @foreach($sent_feedback as $sent)
+            @foreach($received_feedback as $received)
             <tr>
-              @if($sent['id_bidder'] == $id)
-              <td>{{App\Http\Controllers\UserController::getUserById($sent['id_auctioneer'])}} </td>
+              @if($received['id_bidder'] == $id)
+              <td>{{App\Http\Controllers\UserController::getUserById($received['id_auctioneer'])->username}} </td>
               @else
-              <td>{{App\Http\Controllers\UserController::getUserById($sent['id_bidder'])}} </td>
+              <td>{{App\Http\Controllers\UserController::getUserById($received['id_bidder'])->username}} </td>
               @endif
               <td>{{$received['comment']}}</td>
+              <td>{{$received['rating']}}</td>
             </tr>
             @endforeach
           </table>
@@ -237,13 +246,15 @@
                 <tr>
                   <th scope="col">Author</th>
                   <th scope="col">Comment</th>
+                  <th scope="col">Rating</th>
                 </tr>
               </thead>
               <tbody>
-                @foreach($received_feedback as $received)
+                @foreach($sent_feedback as $sent)
                 <tr>
-                  <td>{{App\Http\Controllers\UserController::getUserById($received['author'])}} </td>
-                  <td>{{$received['comment']}}</td>
+                  <td>{{App\Http\Controllers\UserController::getUserById($sent['author'])->username}} </td>
+                  <td>{{$sent['comment']}}</td>
+                  <td>{{$sent['rating']}}</td>
                 </tr>
                 @endforeach
               </table>
